remove references to svm dependency